[gd_scene load_steps=4 format=2]

[ext_resource path="res://user_interfaces/resources/tts_on.png" type="Texture" id=1]
[ext_resource path="res://user_interfaces/resources/tts_off.png" type="Texture" id=2]
[ext_resource path="res://user_interfaces/buttons/TTS_button.gd" type="Script" id=3]

[node name="TTSButton" type="TextureButton"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -149.0
margin_top = -32.0
margin_right = -100.0
margin_bottom = 32.0
focus_neighbour_left = NodePath("../VBoxContainer/VBoxContainer/Start")
toggle_mode = true
action_mode = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="focus_entered" from="." to="." method="_on_TTSButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TTSButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TTSButton_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_TTSButton_pressed"]
